unpackaged/main/default/objects/Water_Transfer_Skid_PM__c/Water_Transfer_Skid_PM__c.object-meta.xml
<CustomObject>
    <label>Water Transfer Skid PM</label>
    <nameField>
        <displayFormat>WTS-{0000}</displayFormat>
        <label>Water Transfer Skid PM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Water Transfer Skid PMs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>