unpackaged/main/default/objects/Water_Transfer_Skid_PM__c/fields/Changed_Oil__c.field-meta.xml
<CustomField>
    <fullName>Changed_Oil__c</fullName>
    <label>Changed Oil</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>