unpackaged/main/default/objects/Water_Transfer_Skid_PM__c/fields/Check_the_strainer_for_any_debris__c.field-meta.xml
<CustomField>
    <fullName>Check_the_strainer_for_any_debris__c</fullName>
    <label>Check the strainer for any debris</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>