unpackaged/main/default/objects/Water_Transfer_Skid_PM__c/fields/Foundation_and_hold_down_bolts_checked__c.field-meta.xml
<CustomField>
    <fullName>Foundation_and_hold_down_bolts_checked__c</fullName>
    <label>Foundation and hold-down bolts checked</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>