unpackaged/main/default/objects/Water_Transfer_Skid_PM__c/fields/Motor_DE_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Motor_DE_Vertical__c</fullName>
    <label>Motor DE Vertical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>