unpackaged/main/default/objects/Water_Transfer_Skid_PM__c/fields/Motor_NDE_Horizontal__c.field-meta.xml
<CustomField>
    <fullName>Motor_NDE_Horizontal__c</fullName>
    <label>Motor NDE Horizontal</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>