unpackaged/main/default/objects/Water_Transfer_Skid_PM__c/fields/Oil_Change_Comment__c.field-meta.xml
<CustomField>
    <fullName>Oil_Change_Comment__c</fullName>
    <label>Oil Change Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>