unpackaged/main/default/objects/Water_Transfer_Skid_PM__c/fields/Pump_Discharge_Pressure__c.field-meta.xml
<CustomField>
    <fullName>Pump_Discharge_Pressure__c</fullName>
    <label>Pump Discharge Pressure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>