unpackaged/main/default/objects/Water_Transfer_Skid_PM__c/fields/Pump_NDE_Vertical__c.field-meta.xml
<CustomField>
    <fullName>Pump_NDE_Vertical__c</fullName>
    <label>Pump NDE Vertical</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>