unpackaged/main/default/objects/Water_Transfer_Skid_PM__c/fields/Shaft_alignment_within_specifications__c.field-meta.xml
<CustomField>
    <fullName>Shaft_alignment_within_specifications__c</fullName>
    <label>Shaft alignment within specifications?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>