unpackaged/main/default/objects/Water_Transfer_Skid_PM__c/fields/Single_Phase_Line_2_amps__c.field-meta.xml
<CustomField>
    <fullName>Single_Phase_Line_2_amps__c</fullName>
    <label>Single Phase Line 2 amps</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>