unpackaged/main/default/objects/Water_Transfer_Skid_PM__c/fields/Three_Phase_Line_3_amps__c.field-meta.xml
<CustomField>
    <fullName>Three_Phase_Line_3_amps__c</fullName>
    <label>Three Phase Line 3 amps</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>