unpackaged/main/default/objects/Water_Transfer_Skid_PM__c/fields/WaterSkidImiage__c.field-meta.xml
<CustomField>
    <fullName>WaterSkidImiage__c</fullName>
    <formula>IMAGE(&#39;https://ensignnr--c.documentforce.com/sfc/servlet.shepherd/version/renditionDownload?rendition=ORIGINAL_Png&amp;versionId=0686e00000Pr7I4&amp;operationContext=CHATTER&amp;contentId=05T6e00001Hvy64&#39;, &#39;Water Skid Photo&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WaterSkidImiage</label>
    <type>Text</type>
</CustomField>