unpackaged/main/default/objects/Water_Transfer_Skid_PM__c/fields/Work_Order__c.field-meta.xml
<CustomField>
    <fullName>Work_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Work Order</label>
    <referenceTo>WorkOrder</referenceTo>
    <relationshipLabel>Water Transfer Skid PMs</relationshipLabel>
    <relationshipName>Water_Transfer_Skid_PMs</relationshipName>
    <type>Lookup</type>
</CustomField>