unpackaged/main/default/objects/Water_Transfer_Skid_PM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Pump_Suction_Pressure__c</columns>
    <columns>Pump_Discharge_Pressure__c</columns>
    <columns>Changed_Oil__c</columns>
    <columns>Oil_Change_Comment__c</columns>
    <columns>Foundation_and_hold_down_bolts_checked__c</columns>
    <columns>Shaft_alignment_within_specifications__c</columns>
    <columns>Check_the_strainer_for_any_debris__c</columns>
    <columns>General_Comments__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>